css/main.css
*{
  margin:0px;
  padding:0px;
  box-sizing: border-box;
}

nav{
  display: flex;
  justify-content:space-around;
  align-items: center;
  min-height: 8vh;
  font-family: "Poppins";
  background-color: #134611;
}

.logo{
  color: #96F072;
  text-transform: uppercase;
  letter-spacing: 5px;
  font-size: 20px;
}
.nav-links{
  display: flex;
  justify-content: space-around;
  width: 30%;
}
.nav-links li{
  list-style: none;
}
.nav-links li>a:hover {
  box-shadow: 0 0 40px black;
  color:#96F072;
  text-decoration: none;
}
.nav-links a{
  color: #FEFCFB;
  text-decoration: none ;
  letter-spacing: 3px;
  font-weight: bold;
  font-size: 14px;
}
.burger{
  display: none;
  cursor: pointer ;
}
.burger div{
  width: 25px;
  height: 3px;
  background-color:#FEFCFB;
  margin: 5px;
  transition: all 0.3s ease;

}

@media screen and (max-width:1024px){
  .nav-links{
    width: 60%;
  }

}


@media screen and (max-width:768px){
  body{
    overflow-x: hidden;
  }
  .nav-links{
    position: absolute;
    right: 0px;
    height: 92vh;
    top: 8vh;
    background-color: #134611;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 50%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
  }
  /* .nav-links li{
    opacity: 0;

  } */
  .burger{
    display: block;
  }
 
}
.nav-active{
  transform: translateX(0%);
}


@keyframes navlinkFade{
  from{
    opacity: 0;
    transform: translateX(50px);
  }
  to{
    opacity: 1;
    transform: translateX(0px);
  }
}

.toggle .line1{
  transform: rotate(-45deg) translate(-5px,6px);

}
.toggle .line2{
  opacity: 0;
}
.toggle .line3{
  transform: rotate(45deg) translate(-5px,-6px);
}

/* p{
  color:#999 ;
  line-height: 25px;
} */
h2,h3{
   color: #fff;
}
h2{
  font-size: 18px;
}
.footer-top{
  background: #134611;
  padding: 80px 0;
}
.segment-one h3 {
  font-family: courgette;
  color:#96E072;
  letter-spacing: 3px;
  margin: 10px 0;
}
.segment-one p {
  color: grey;

}
.segment-two p {
  color: grey;

}
.segment-three p {
  color: grey;

}
.segment-two h2{
  color: #fff;
  font-family: "Poppins";
  text-transform: uppercase;
}
.segment-two h2:before{
  content: '|';
  color: #96e072;
  padding-right: 10px;
}
.segment-two ul{
  margin: 0;
  padding: 0;
  list-style: none;
}
.segment-two ul li{
border-bottom: 1px solid rgba(255, 255, 255,0.3);
line-height: 40px;
}
.segment-two ul li a{
  color: #999;
  text-decoration: none;
}
.segment-three h2{
  color: #fff;
  font-family: "Poppins";
  text-transform: uppercase;
}
.segment-three h2:before{
  content: '|';
  color: #96e072;
  padding-right: 10px;
}
.segment-three a{
  background: #494848;
  width: 40px;
  height: 40px;
  display: inline-block;
  border-radius: 50%;
}
.segment-three a i{
  font-size: 20px;
  color: #fff;
  padding: 10px 12px;

}
.segment-four h2{
  color: #fff;
  font-family: "Poppins";
  text-transform: uppercase;
}
.segment-four h2:before{
  content: '|';
  color: #96e072;
  padding-right: 10px;
}
.segment-four form input[type=submit]{
  background: #3DA35D;
  border: none;
  padding: 3px 15px;
  color: #fff;
  text-transform: uppercase;
}
.footer-bottom-text{
  text-align: center;
  background: #134611;
  line-height: 75px;
  color: grey;
}


@media only screen and (min-width:768px) and (max-width: 991px){
  .md-mb-30{
    margin-bottom: 30px;
  }
}
@media only screen and (max-width: 767px){
  .sm-mb-30{
    margin-bottom: 30px;
  }
  .footer-top{
    padding: 50px 0;
  }
}

/* html,body{
  padding: 10px 0 0 0;
  margin: 0;
} */
.galleryContainer{
  width: 100%;
  height: 500px;
  max-width: 1000px;
  margin: auto;
  user-select: none;
  box-shadow: 0px 0px 2px 1px #96e072;
  padding: 30px;
  box-sizing: border-box;
}
.galleryContainer .slideShowContainer{
  width: 100%;
  height: 90%;
  overflow: hidden;
  background-color: gainsboro;
  position: relative;
}
.galleryContainer .slideShowContainer #playPause{
  width: 32px;
  height: 32px;
  position: absolute;
  background-image: url(../images/playPause.png);
  background-repeat: no-repeat;
  z-index: 5;
  background-size: cover;
  margin: 5px;
  cursor: pointer;
}
.galleryContainer .slideShowContainer #playPause:hover{
  opacity: .7;
}
.galleryContainer .slideShowContainer .imageHolder{
  width: 100%;
  height: 100%;
  position: absolute;
  opacity: 0;
}
.galleryContainer .slideShowContainer .imageHolder img{
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.galleryContainer .slideShowContainer .imageHolder .captionText{
  display: none;
}

.galleryContainer .slideShowContainer .leftArrow,.galleryContainer .slideShowContainer .rightArrow{
  width: 50px;
  background: #00000036;
  position: absolute;
  left: 0;
  z-index: 1;
  transition: background 0.5s;
  height: 72px;
  top: 50%;
  transform: translateY(-50%);
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}
.galleryContainer .slideShowContainer .rightArrow{
  left: auto;
  right: 0;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}
.galleryContainer .slideShowContainer .leftArrow:hover,.galleryContainer .slideShowContainer .rightArrow:hover{
  background: #000000a8;
  cursor: pointer;
}
.galleryContainer .arrow{
  display: inline-block;
  border: 3px solid white;
  width: 10px;
  height: 10px;
  border-left: none;
  border-bottom: none;
  margin: auto;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}
.galleryContainer .arrow.arrowLeft{
  transform: rotateZ(-135deg);
}
.galleryContainer .arrow.arrowRight{
  transform: rotateZ(45deg);
}


.galleryContainer .slideShowContainer>.captionTextHolder{
  position: absolute;
  bottom: 0;
  z-index: 1;
  color: white;
  font-family: 'Josefin Sans', sans-serif;
  font-size: 16px;
  text-align: center;
  width: 100%;
  background: #00000047;
  height: 50px;
  line-height: 50px;
  overflow: hidden;
  opacity: .8;
}
.galleryContainer .slideShowContainer>.captionTextHolder>.captionText{
  margin: 0;
}

.galleryContainer #dotsContainer{
  width: 100%;
  height: 10%;
  text-align: center;
  padding-top: 20px;
  box-sizing: border-box;
}
.galleryContainer #dotsContainer .dots{
  display: inline-block;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  margin-left: 5px;
  background-color: #3DA35D ;
  cursor: pointer;
  transition:background-color 0.5s;
}
.galleryContainer #dotsContainer .dots:first-child{
  margin-left: 0;
}
.galleryContainer #dotsContainer .dots:hover,.galleryContainer #dotsContainer .dots.active{
  background-color: #96e072;;
}

.galleryContainer .moveLeftCurrentSlide{
  animation-name: moveLeftCurrent;
  animation-duration: 0.5s;
  animation-timing-function: linear;
  animation-fill-mode:forwards;

}
.galleryContainer .moveLeftNextSlide{
  animation-name: moveLeftNext;
  animation-duration: 0.5s;
  animation-timing-function: linear;
  animation-fill-mode:forwards;
}
@keyframes moveLeftCurrent {
  from {margin-left: 0;opacity: 1;}
  to {margin-left: -100%;opacity: 1;}
}
@keyframes moveLeftNext {
  from {margin-left: 100%;opacity: 1;}
  to {margin-left: 0%;opacity: 1;}
}


.galleryContainer .moveRightCurrentSlide{
  animation-name: moveRightCurrent;
  animation-duration: 0.5s;
  animation-timing-function: linear;
  animation-fill-mode:forwards;
}
.galleryContainer .moveRightPrevSlide{
  animation-name: moveRightPrev;
  animation-duration: 0.5s;
  animation-timing-function: linear;
  animation-fill-mode:forwards;
}
@keyframes moveRightCurrent {
  from {margin-left: 0;opacity: 1;}
  to {margin-left: 100%;opacity: 1;}
}
@keyframes moveRightPrev {
  from {margin-left: -100%;opacity: 1;}
  to {margin-left: 0%;opacity: 1;}
}
.slideTextFromBottom {
  animation-name: slideTextFromBottom;
  animation-duration: 0.7s;
  animation-timing-function: ease-out;
}
@keyframes slideTextFromBottom {
  from {opacity: 0;margin-top: 100px}
  to {opacity: 1;margin-top: 0px;}
}
.slideTextFromTop {
  animation-name: slideTextFromTop;
  animation-duration: 0.7s;
  animation-timing-function: ease-out;
}
@keyframes slideTextFromTop {
  from {opacity: 0;margin-top: -100px}
  to {opacity: 1;margin-top: 0px;}
}

/* about us */
.sectionpadding {
  padding: 60px 0px;
}
#about {
  background-color: #96E072;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: -3px;
  border-radius: 20px;
  /* padding: 20%; */
 

}
#title-text{
  padding-top: 5px;
  border-right: 5px solid #3e8914;
  font-size: 40px;
  font-family: 'Poppins';
  padding-right: 5px;
  color: black;
}

.about-text {
  color: white;
  padding-top: 8px;
  font-family: 'Poppins';
  font-size: 18px;

}
/* gallery */
.gallery2Container {
  padding: 60px;
  width: 100%;
  display: grid;
  grid-auto-flow: dense;
  grid-template:  "1fr 1fr 1fr 1fr 1fr" 33.33vh
                  "1fr 1fr 1fr 1fr 1fr" 33.33vh
                  "1fr 1fr 1fr 1fr 1fr" 33.33vh;
  grid-gap: 4px;
  box-sizing: border-box;
}
.gallery2Container .box {
  position: relative;
  background: #96e072;
}
.portrait {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  background-position: center;
}
.landscape {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  background-position:center;
}
.gallery2Container .box.a {
  grid-row: span 2;
}
.gallery2Container .box.b,
.gallery2Container .box.f,
.gallery2Container .box.h,
.gallery2Container .box.j{
  grid-column: span 2;
}
@media(max-width: 991px) {
  .gallery2Container {
      grid-template:  "1fr 1fr 1fr" 250px
                      "1fr 1fr 1fr" 250px
                      "1fr 1fr 1fr" 250px
                      "1fr 1fr 1fr" 250px
                      "1fr 1fr 1fr" 250px;
}
@media(max-width: 768px) {
  .gallery2Container {
      grid-template:  "1fr 1fr" 200px
                      "1fr 1fr" 200px
                      "1fr 1fr" 200px
                      "1fr 1fr" 200px
                      "1fr 1fr" 200px
                      "1fr 1fr" 200px
                      "1fr 1fr" 200px;
}
.gallery2Container .box.h {
  grid-column: span 1;
}

